--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -22,7 +22,7 @@
     "@heroicons/react": "^2.2.0",
     "@launchdarkly/node-server-sdk": "^9.7.2",
     "@next/bundle-analyzer": "^15.1.0",
-    "@sentry/nextjs": "^8",
+    "@sentry/nextjs": "^10.26.0",
     "@tanstack/react-query": "^5.62.2",
     "@types/negotiator": "^0.6.3",
     "dotenv": "^16.4.7",
@@ -32,7 +32,7 @@
     "import-in-the-middle": "^2.0.0",
     "jose": "^5.9.6",
     "negotiator": "^1.0.0",
-    "next": "15.0.3",
+    "next": "15.4.1",
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
@@ -43,7 +43,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.4.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
